--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
+*{
+    margin: 0;
+    border: 0;
+    padding: 0;
+}
+.tam-card{
+    width: 70%;
+}
