agregado de colores y tamaños de letras

--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,58 @@
     padding: 0;
 }
 .tam-card{
-    width: 70%;
+    width: 100%;
+}
+
+.fire1 {
+    background-color: rgb(224, 178, 148);
+}
+.fire2{
+    background-color: rgb(225, 131, 116);
+}
+.fire3 {
+    background:linear-gradient(to right,rgb(227, 105, 86), rgb(94, 233, 221)) ;
+}
+
+.plant1{
+    background: linear-gradient(to right, rgb(84, 241, 84), rgba(240, 83, 240, 0.801)) ;
+}
+.plant2{
+    background: linear-gradient(to right, rgba(67, 191, 67, 0.992), rgb(189, 61, 189)) ;
+}
+.plant3{
+    background: linear-gradient(to right, rgb(38, 136, 38), rgba(139, 46, 139, 0.801)) ;
+}
+
+.water1{
+background-color: rgb(161, 161, 255);
+}
+.water2{
+background-color: rgb(74, 74, 255);
+}
+.water3{
+background-color: rgb(47, 47, 254);
+}
+
+.bug1{
+background: rgb(141, 225, 97);
+}
+.bug2{
+background: rgb(40, 201, 40);
+}
+.bug3{
+background:linear-gradient(to right, green, rgb(94, 233, 221));
+}
+
+.elemPoisson{
+    background: purple;
+}
+.elemFly {
+    background: rgb(96, 230, 230);
+}
+.elemWater {
+    background-color: rgb(23, 23, 162);
+}
+.elemPlant {
+    background: rgb(120, 175, 36);
 }
